# media_cc

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: copier.rs  lib.rs  main.rs  metadata.rs  scanner.rs
