[package]
name = "media-cc"
version = "0.1.0"
description = "Media File Organizer - Organize photos and videos by creation date"
authors = ["xiao"]
edition = "2021"

[lib]
name = "media_cc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
kamadak-exif = "0.6"
md-5 = "0.10"
hex = "0.4"
thiserror = "2"
